chore: more java17 idiomatic refactoring